--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,5 +16,6 @@ jobs:
       run: pdm install
     
     - name: Run tests
-      run: python3 tests/test_task.py
-      env: "PYTHONPATH": .
+      run: python3 -m pytest tests/test_task.py
+      env:
+        PYTHONPATH: ./src
