--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,7 +10,7 @@ jobs:
     - name: Setup PDM
       uses: pdm-project/setup-pdm@v4
       with:
-        python-version: 3.10
+        python-version: 3.10  # Обновите версию Python здесь
         cache: true
     - name: Install tools
       run: pdm install
