--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,21 +1,19 @@
 name: Run tests
 on: [push]
 jobs:
-  tests:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-    - name: Check out
-      uses: actions/checkout@v4
-    - name: Setup PDM
-      uses: pdm-project/setup-pdm@v4
-      with:
-        python-version: 3.9  # Обновите версию Python здесь
-        cache: true
-    - name: Install tools
-      run: pdm install
-    
-    - name: Run tests
-      run: python3 -m pytest tests/test_task.py
-      env:
-        PYTHONPATH: ./src
+tests:
+runs-on: ubuntu-latest
+timeout-minutes: 10
+steps:
+- name: Check out
+uses: actions/checkout@v4
+- name: Setup PDM
+uses: pdm-project/setup-pdm@v4
+with:
+python-version: 3.9
+cache: true
+- name: Install tools
+run: pdm install
+- name: Run tests
+run: python3 tests/tests.py
+env: {"PYTHONPATH": "."}
